# ES_Individual_Proj

./: .env  .gitignore  README.md  docker-compose.yaml  docker-compose.yaml.prod
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/postgres_db/: init.sql
backend/src/: crud_operations.py  database.py  main.py  models.py  schemas.py  utils.py
backend/src/endpoints/: task_endpoint.py  user_endpoint.py  user_endpoints.py
backend/src/repositories/: task_repositories.py  task_repository.py  user_repositories.py  user_repository.py
frontend/: .env  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  constants.jsx  main.jsx  utils.jsx
frontend/src/api/: index.jsx  postActions.jsx  taskActions.jsx
frontend/src/assets/: index.jsx
frontend/src/components/: AddTaskModal.jsx  HorizontalNavbar.jsx  Legend.jsx  NavBarComp.jsx  ProfileComponent.jsx  RequiredAuth.jsx  TaskCard.jsx
frontend/src/layout/: Layout.jsx
frontend/src/pages/: AddTaskPage.jsx  HomePage.jsx  LandingPage.jsx  LoginPage.jsx
frontend/src/stores/: filterStore.jsx  userStore.jsx
