[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the Individual Project of the class Software Engineer 2024/25"
authors = ["zegameiro <jose.mcgameiro@ua.pt>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
